--- a/noeminagy.teacher/noeminagy.teacher.html
+++ b/noeminagy.teacher/noeminagy.teacher.html
@@ -70,8 +70,8 @@
     // =============================================================================
     // CONFIGURAÇÃO DA COLEÇÃO - MODIFIQUE AQUI PARA USAR OUTRA COLEÇÃO
     // =============================================================================
-    const NOME_COLECAO = "askjackiebr"; // ← Altere este valor para outra coleção
-    const NOME_JSON = "export_askjackiebr.json"; // ← Altere este valor para outro JSON
+    const NOME_COLECAO = "noeminagy.teacher"; // ← Altere este valor para outra coleção
+    const NOME_JSON = "noeminagy.teacher.json"; // ← Altere este valor para outro JSON
     // =============================================================================
 
     const firebaseConfig = {
